# NFTGametestrun

./: Anchor.toml
programs/anchorbs/: Cargo.toml
programs/anchorbs/src/: lib.rs
tests/: anchorbs.js
