[package]
name = "anchorbs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchorbs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
metaplex-token-metadata = {version = "0.0.1", features = ["no-entrypoint"]}
solana-program = "1.8.2"
anchor-spl = "0.18.0"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
